# Marco-Deidda

./: README.md  behave.ini  exploratory-testing.md
e2e-android-app-test/: .gitignore  config.json  pyproject.toml
e2e-android-app-test/features/: environment.py  transaction.feature
e2e-android-app-test/features/steps/: transaction.py
e2e-android-app-test/pages/: main.py  settings.py  transaction.py  transaction_history.py
e2e-android-app-test/reports/junit-results/: TESTS-transaction.xml
e2e-android-app-test/static-report/: index.html
e2e-android-app-test/static-report/data/: behaviors.csv  behaviors.json  packages.json  suites.csv  suites.json  timeline.json
e2e-android-app-test/static-report/data/attachments/: 17e37f295ba25ab2.csv  b9a939ffd24e69fd.csv
e2e-android-app-test/static-report/data/test-cases/: 30a9cd95e2fa95fc.json  6d2720dffd7a88c8.json  cf03cddbfab7d6d1.json
e2e-android-app-test/static-report/export/: influxDbData.txt  prometheusData.txt
e2e-android-app-test/static-report/history/: history.json
e2e-android-app-test/static-report/widgets/: behaviors.json  duration-trend.json  duration.json  severity.json  summary.json
e2e-android-app-test/utils/: helpers.py
